objects/APTS_Discounts_Config__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Additional_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Additional_Discounts_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Channel__c</fullName>
        <label>Local Channel</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Related Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3410/3435-ehouse-IN-COG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3410/3435-ehouse-IN-Heavy &amp; Light IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3410/3435-ehouse-IN-Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3410/3435-ehouse-IN-Industry EPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Arab Emirates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qatar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <description>Enter description for discount config rule</description>
        <inlineHelpText>Enter description for discount config rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Config_Name__c</fullName>
        <formula>TEXT(APTS_Country__c) + &apos;/&apos; + RecordType.Name + &apos;-&apos; + IF( NOT(ISBLANK(TEXT(APTS_Quote_Record_Type__c))),TEXT(APTS_Quote_Record_Type__c) , TEXT(APTS_Record_Type__c)) + &apos;/&apos; + APTS_Local_Channel__r.APTS_Code__c + &apos;/&apos; + TEXT(APTS_Division__c)</formula>
        <label>Discount Config Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>LP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_MS__c</fullName>
        <inlineHelpText>More than one hierarchy level can be selected. This will allow the sales rep to &apos;Add to Cart&apos; the chosen hierarchy levels.</inlineHelpText>
        <label>Hierarchy Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level__c</fullName>
        <label>Hierarchy Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_in_Cart__c</fullName>
        <label>Hierarchy in Cart</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APTS_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Channel</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Local Channel</value>
            </filterItems>
            <filterItems>
                <field>$User.APTS_Locale__c</field>
                <operation>equals</operation>
                <valueField>APTS_Master_Picklist_Table__c.APTS_Locale__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Discounts Config</relationshipLabel>
        <relationshipName>Discounts_Config</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Discount_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Net Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Discount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Net Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Record_Type__c</fullName>
        <inlineHelpText>Select quotation record type. For Spain, there is only one called LP</inlineHelpText>
        <label>Quotation Classification</label>
        <picklist>
            <picklistValues>
                <fullName>LP</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Record_Type__c</fullName>
        <inlineHelpText>Select MSPA record type.</inlineHelpText>
        <label>MSPA Classification</label>
        <picklist>
            <picklistValues>
                <fullName>MSPA</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_SubType__c</fullName>
        <label>Subtype</label>
        <picklist>
            <controllingField>APTS_Country__c</controllingField>
            <picklistValues>
                <fullName>Stock Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSPA additional discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calce Fattura</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Substitute_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Substitute Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Substitutional_Discounts_Hierarchy__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Substitute Discount</label>
        <type>Checkbox</type>
    </fields>
    <label>Discount Config</label>
    <listViews>
        <fullName>APTS_France_Discount_Config_MSPA</fullName>
        <columns>NAME</columns>
        <columns>APTS_Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_SubType__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_Discounts_Config__c.APTS_MSPA</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>France Discount Config MSPA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_France_Discount_Config_Quotation</fullName>
        <columns>NAME</columns>
        <columns>APTS_Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_SubType__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_Discounts_Config__c.APTS_Quotation</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>France Discount Config Quotation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Italy_Discount_Config_MSPA</fullName>
        <columns>NAME</columns>
        <columns>APTS_Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_SubType__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_Discounts_Config__c.APTS_MSPA</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Italy</value>
        </filters>
        <label>Italy Discount Config MSPA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Italy_Discount_Config_Quotation</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_SubType__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_Discounts_Config__c.APTS_Quotation</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Italy</value>
        </filters>
        <label>Italy Discount Config Quotation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Spain_Discount_Config_MSPA</fullName>
        <columns>NAME</columns>
        <columns>APTS_Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_SubType__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_Discounts_Config__c.APTS_MSPA</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Spain</value>
        </filters>
        <label>Spain Discount Config MSPA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Spain_Discount_Config_Quotation</fullName>
        <columns>NAME</columns>
        <columns>APTS_Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_SubType__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_Discounts_Config__c.APTS_Quotation</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>Spain</value>
        </filters>
        <label>Spain Discount Config Quotation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_Quote_Record_Type__c</columns>
        <columns>APTS_Record_Type__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_IsActive__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_Net_Discount__c</columns>
        <columns>APTS_Substitutional_Discounts_Hierarchy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_EP_Discount_Config_MSPA</fullName>
        <columns>NAME</columns>
        <columns>APTS_Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Channel__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_SubType__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_Discounts_Config__c.APTS_MSPA</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>CN-EP/Discount Config MSPA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_EP_Discount_Config_Quotation</fullName>
        <columns>NAME</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Channel__c</columns>
        <columns>APTS_SubType__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_Discounts_Config__c.APTS_Quotation</value>
        </filters>
        <filters>
            <field>APTS_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>CN-EP/Discount Config Quotation</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Discounts Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discounts Config</pluralLabel>
    <recordTypes>
        <fullName>APTS_MSPA</fullName>
        <active>true</active>
        <description>MSPA Discounts Config</description>
        <label>MSPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_Quotation</fullName>
        <active>true</active>
        <description>Quotation Discounts Config</description>
        <label>Quotation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>APTS_Missing_Hierarchy_Discounts</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(APTS_Additional_Discounts_Hierarchy__c),
NOT(APTS_Substitutional_Discounts_Hierarchy__c)
)</errorConditionFormula>
        <errorMessage>Please check at least one value from hierarchy discounts section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_Missing_Hierarchy_Level</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(APTS_Hierarchy_Level_MS__c)</errorConditionFormula>
        <errorDisplayField>APTS_Hierarchy_Level_MS__c</errorDisplayField>
        <errorMessage>Please select value for hierarchy level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_Missing_Product_Discounts</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(APTS_Net_Discount__c),
NOT(APTS_Additional_Discount__c),
NOT(APTS_Substitute_Discount__c)
)</errorConditionFormula>
        <errorMessage>Please check at least one value from product discounts section</errorMessage>
    </validationRules>
</CustomObject>